templates/security-groups.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "AWS CloudFormation Template for bosh Security Groups.",

  "Parameters": {
    "vpcid": {
      "Description": "Id of VPC",
      "Type": "AWS::EC2::VPC::Id",
      "ConstraintDescription": "must be the id of existing VPC."
    }
  },

  "Resources": {

    "jumpBox": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "bosh",
        "VpcId": { "Ref": "vpcid" },
        "Tags": [ { "Key": "Name", "Value": "BoshJumpBox" } ],
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol" : "icmp", "FromPort" : "8", "ToPort" : "-1", "CidrIp" : "0.0.0.0/0" }
        ]
      }
    },

    "NAT": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "nat",
        "VpcId": { "Ref": "vpcid" },
        "Tags": [ { "Key": "Name", "Value": "NAT" } ],
        "SecurityGroupIngress": [
          { "IpProtocol": "-1", "FromPort": "1", "ToPort": "65535", "CidrIp": "10.0.16.0/24" }
        ]
      }
    },

    "bosh": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "bosh",
        "VpcId": { "Ref": "vpcid" },
        "Tags": [ { "Key": "Name", "Value": "bosh" } ],
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol" : "icmp", "FromPort" : "8", "ToPort" : "-1", "CidrIp" : "0.0.0.0/0" },
          { "IpProtocol" : "tcp", "FromPort" : "4443", "ToPort" : "4443", "CidrIp" : "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "6868", "ToPort": "6868", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "25555", "ToPort": "25555", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "1", "ToPort": "65535", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "udp", "FromPort": "1", "ToPort": "65535", "CidrIp": "0.0.0.0/0" }

        ]
      }
    }
  },


  "Outputs": {
    "jumpBoxSGId": {
      "Description": "bosh security group id",
      "Value" : { "Fn::GetAtt": [ "jumpBox", "GroupId"] }
    },

    "boshSGId": {
      "Description": "bosh security group id",
      "Value" : { "Fn::GetAtt": [ "bosh", "GroupId"] }
    },

    "NATSGId": {
      "Description": "nat security group id",
      "Value" : { "Fn::GetAtt": [ "NAT", "GroupId"] }
    }
  }
}
